# non_linearity_code

./: .gitignore  README.md  code to shift the inputs.py  process data analysis on nonlinearity.ipynb  pyproject.toml  reproduction_script.py  reproduction_script_v2.py  run_analysis.py  update_notebook.py
data/1.3/: profile_run_1.pkl  profile_run_2.pkl  profile_run_3.pkl  profile_run_4.pkl  profile_run_5.pkl  profile_run_6.pkl  profile_run_7.pkl
data/1.5/: profile_run_1.pkl  profile_run_2.pkl  profile_run_3.pkl  profile_run_4.pkl  profile_run_5.pkl  profile_run_6.pkl  profile_run_7.pkl
data/1.9/: profile_run_1.pkl  profile_run_2.pkl  profile_run_3.pkl  profile_run_4.pkl  profile_run_5.pkl  profile_run_6.pkl  profile_run_7.pkl
data/baseline/: profile_run_1.pkl  profile_run_2.pkl  profile_run_3.pkl  profile_run_4.pkl  profile_run_5.pkl  profile_run_6.pkl  profile_run_7.pkl
src/nonlinearity/: __init__.py  config.py
src/nonlinearity/analysis/: __init__.py  nonstationarity.py  recovery.py  statistics.py
src/nonlinearity/core/: __init__.py  compliance.py  linearisation.py  metrics.py  processors.py
src/nonlinearity/data/: __init__.py  loaders.py  validators.py
src/nonlinearity/utils/: __init__.py  decorators.py  file_helpers.py  logging_config.py
src/nonlinearity/visualisation/: __init__.py  charts.py  histograms.py  plots.py  scatter.py
tests/: conftest.py  test_compliance.py  test_config.py
